--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <main>
 
+      <h1></h1> <!-- I put this here to emphasise that, for accessibility reasons, it's the best practice to start the main content of a web page with a level 1 heading,
+      but since this project revolves around a card that would in a practical scenario belong to a certain section further down, it doesn't make sense to use h1 inside of a card. -->
+
       <!-- Card -->
       <div class="card">
 
